--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ supabase
 requests
 gunicorn
 git+https://github.com/openai/whisper.git
-ffmpeg-static
 torch  # or torchaudio if needed
+tqdm
+numpy
