--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-twilio
-gunicorn
-flask
-requests
+streamlit
 python-dotenv
-vosk
-soundfile
 cryptography
-google-generativeai
-chromadb
-nltk
-sentence_transformers
+transformers
+torch
+sentence-transformers
 faiss-cpu
+google-generativeai
+nltk
+soundfile
